<resources>
    <string name="app_name">IP Address</string>
    <string name="network_error">Network error</string>
    <string name="data_error">Data error</string>
    <string name="search_ip">Search for ip address</string>
    <string name="my_ip_info">Check my</string>
    <string name="info">information</string>
    <string name="maps">Open location</string>
    <string name="close">Close</string>
    <string name="not_installed">Application not installed</string>
    <string name="menu">Menu</string>
    <string name="history">Search History</string>
    <string name="share_app">Share</string>
    <string name="language">Choose Language</string>
    <string name="donate">Donate with PayPal</string>
    <string name="soon">Coming soon!</string>
    <string name="show">Show details</string>
    <string name="delete_ip_history">Delete ip search data?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>

    <string name="city">City</string>
    <string name="country">Country</string>
    <string name="country_code">Country Code</string>
    <string name="isp">Internet Service Provider</string>
    <string name="coordinates">Coordinates</string>
    <string name="organization">Organization</string>
    <string name="ip_address">IP Address</string>
    <string name="region">Region Code</string>
    <string name="region_name">Region Name</string>
    <string name="timezone">Time Zone</string>
    <string name="zip">Postal Code</string>
    <string name="title_activity_history">HistoryActivity</string>

    <string name="english">English</string>
    <string name="hebrew">Hebrew</string>

</resources>
