<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainBg"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusableInTouchMode="true"
    android:background="@drawable/bg_color"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:indeterminateDrawable="@drawable/progress_bar" />

    <ScrollView
        android:id="@+id/mainLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:focusable="true"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:onClick="backToMain"
                    app:srcCompat="@drawable/logo_text" />

                <ImageView
                    android:id="@+id/imageView4"
                    android:layout_width="80dp"
                    android:layout_height="40dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_weight="0"
                    android:onClick="startMenu"
                    app:srcCompat="@drawable/menu" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/searchTable"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="0"
                android:background="@drawable/forms_bg"
                android:inputType="text"
                android:orientation="horizontal"
                android:padding="8dp"
                android:textColor="@color/mainText"
                android:textSize="20sp">

                <EditText
                    android:id="@+id/editTextSearchIp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/search_ip"
                    android:imeOptions="actionDone"
                    android:inputType="text"
                    android:textColor="@color/mainText"
                    android:textSize="20sp"
                    tools:text="@string/search_ip" />

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="10"
                    android:onClick="getIpInfo"
                    app:srcCompat="@drawable/magnifier_image" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/myIpInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="20dp"
                android:layout_weight="1"
                android:inputType="text"
                android:onClick="getMyIpInfo"
                android:orientation="vertical"
                android:padding="8dp"
                android:textColor="@color/mainText"
                android:textSize="20sp">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/my_ip_info"
                    android:textAlignment="center"
                    android:textColor="@color/common_google_signin_btn_text_dark_default"
                    android:textSize="24sp" />

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="160dp"
                    android:layout_height="150dp"
                    app:srcCompat="@drawable/placeholder" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/info"
                    android:textAlignment="center"
                    android:textColor="@color/common_google_signin_btn_text_dark_default"
                    android:textSize="24sp" />
            </LinearLayout>

            <com.google.android.gms.ads.AdView
                android:id="@+id/adView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:layout_weight="0"
                app:adSize="BANNER"
                app:adUnitId="ca-app-pub-1700840904778100/9894667478"></com.google.android.gms.ads.AdView>

            <LinearLayout
                android:id="@+id/ipInfoTable"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="0"
                android:background="@drawable/table_shadow_bg"
                android:inputType="text"
                android:orientation="vertical"
                android:padding="13dp"
                android:textColor="@color/mainText"
                android:textSize="20sp"
                android:visibility="gone">

                <com.google.android.gms.maps.MapView
                    android:id="@+id/mapView"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:layout_marginBottom="10dp"
                    android:layout_weight="1" />

                <TextView
                    android:id="@+id/textViewCity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="3dp"
                    android:layout_weight="1"
                    android:text="@string/city"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textViewCityData"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_weight="1"
                    android:text="city"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/textViewCountry"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="3dp"
                    android:layout_weight="1"
                    android:text="@string/country"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="10dp"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/imageViewCountryFlag"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="10"
                        app:srcCompat="@drawable/cancel_black" />

                    <TextView
                        android:id="@+id/textViewCountryData"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="country"
                        android:textSize="18sp" />
                </LinearLayout>

                <TextView
                    android:id="@+id/textViewISP"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="3dp"
                    android:layout_weight="1"
                    android:text="@string/isp"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textViewISPData"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_weight="1"
                    android:text="isp"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/textViewCoord"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="3dp"
                    android:layout_weight="1"
                    android:text="@string/coordinates"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textViewCoordData"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_weight="1"
                    android:text="coordinates"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/textViewOrg"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="3dp"
                    android:layout_weight="1"
                    android:text="@string/organization"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textViewOrgData"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_weight="1"
                    android:text="organization"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/textViewIp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="3dp"
                    android:layout_weight="1"
                    android:text="@string/ip_address"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textViewIpData"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_weight="1"
                    android:text="ip address"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/textViewRegion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="3dp"
                    android:layout_weight="1"
                    android:text="@string/region_name"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textViewRegionData"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_weight="1"
                    android:text="region"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/textViewRegionCode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="3dp"
                    android:layout_weight="1"
                    android:text="@string/region"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textViewRegionCodeData"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_weight="1"
                    android:text="region code"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/textViewZip"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="3dp"
                    android:layout_weight="1"
                    android:text="@string/zip"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textViewZipData"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_weight="1"
                    android:text="zip"
                    android:textSize="18sp" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>