<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blank_bg"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/custom_white_bg"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="20dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageViewClose"
                android:layout_width="20dp"
                android:layout_height="20dp"
                app:srcCompat="@drawable/cancel_black" />

            <LinearLayout
                android:layout_width="30dp"
                android:layout_height="20dp"
                android:orientation="horizontal"></LinearLayout>

            <TextView
                android:id="@+id/textViewClose"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/delete_ip_history"
                android:textAlignment="center"
                android:textColor="@color/common_google_signin_btn_text_dark_focused"
                android:textSize="20sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="50dp"
                android:layout_height="20dp"
                android:orientation="horizontal"></LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/buttonCancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/button_bg"
                android:text="@string/cancel"
                android:textAllCaps="false"
                android:padding="10dp"
                android:textColor="@color/common_google_signin_btn_text_dark_default"
                android:textSize="18sp" />

            <Button
                android:id="@+id/buttonDelete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="10dp"
                android:background="@drawable/button_bg"
                android:text="@string/delete"
                android:textAllCaps="false"
                android:textColor="@color/common_google_signin_btn_text_dark_default"
                android:textSize="18sp" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>